--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -300,20 +300,26 @@ jobs:
           "
 
         echo "Starting container with volume..."
-        # Initialize log file with a header
+        # Initialize log file with a header and ensure correct permissions
         docker run --rm \
           --entrypoint sh \
           -v data:/app/data \
-          --user crsbot \
+          --user root \
           crs-bot:test \
-          -c "echo '[$(date -u)] Container startup - Log file initialized' >> /app/data/github_release_bot.log && \
-              ls -l /app/data/github_release_bot.log && \
-              stat /app/data/github_release_bot.log"
+          -c "
+            touch /app/data/github_release_bot.log && \
+            chown 10001:10001 /app/data/github_release_bot.log && \
+            chmod 600 /app/data/github_release_bot.log && \
+            echo '[$(date -u)] Container startup - Log file initialized' >> /app/data/github_release_bot.log && \
+            ls -l /app/data/github_release_bot.log && \
+            stat /app/data/github_release_bot.log
+          "
 
         # Verify file permissions before starting container
         docker run --rm \
           --entrypoint sh \
           -v data:/app/data \
+          --user crsbot \
           crs-bot:test \
           -c "
             echo 'Verifying log file permissions...'
