--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -244,8 +244,8 @@ jobs:
             chown -R 0:10001 /target
             echo 'Initial directory permissions:'
             ls -la /target
-            chmod 0750 /target
-            echo 'After chmod 0750:'
+            chmod 0770 /target
+            echo 'After chmod 0770:'
             ls -la /target
             chown 10001:10001 /target/github_release_bot.log
             chown 10001:10001 /target/last_version.json
@@ -438,9 +438,9 @@ jobs:
         echo "Volume permissions:"
         VOLUME_PERMS=$(docker compose exec -T crs-bot ls -la /app/data)
         echo "$VOLUME_PERMS"
-        if ! echo "$VOLUME_PERMS" | grep -q "^drwxr-x---.*root.*crsbot"; then
+        if ! echo "$VOLUME_PERMS" | grep -q "^drwxrwx---.*root.*crsbot"; then
           echo "❌ Data directory has incorrect permissions or ownership"
-          echo "Expected: drwxr-x--- root crsbot"
+          echo "Expected: drwxrwx--- root crsbot"
           echo "Got: $VOLUME_PERMS"
           exit 1
         fi
