--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -307,6 +307,7 @@ jobs:
           --user root \
           crs-bot:test \
           -c "
+            mkdir -p /app/data && \
             touch /app/data/github_release_bot.log && \
             chown 10001:10001 /app/data/github_release_bot.log && \
             chmod 600 /app/data/github_release_bot.log && \
@@ -327,6 +328,22 @@ jobs:
             stat /app/data/github_release_bot.log
             echo 'Testing file write access...'
             echo '[$(date -u)] Pre-start permission test' >> /app/data/github_release_bot.log
+          "
+
+        # Ensure volume is properly mounted before starting container
+        docker run --rm \
+          --entrypoint sh \
+          -v data:/app/data \
+          --user crsbot \
+          crs-bot:test \
+          -c "
+            echo 'Verifying volume mount...'
+            ls -la /app/data
+            echo 'Verifying log file exists...'
+            test -f /app/data/github_release_bot.log || exit 1
+            echo 'Verifying log file permissions...'
+            test -w /app/data/github_release_bot.log || exit 1
+            echo 'Volume verification complete'
           "
 
         docker compose up -d
