test: Update Discord webhook URL to use test endpoint in Docker tests

--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -206,7 +206,7 @@ jobs:
 
         echo "📝 Creating test environment file..."
         cat > .env << EOL
-        DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/test
+        DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/1234567890/abcdefghijklmnopqrstuvwxyz
         PYTHONUNBUFFERED=1
         EOL
         chmod 640 .env
