--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,6 +8,8 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  pull_request_target:
+    types: [ labeled ]
   workflow_dispatch:
 
 
@@ -18,6 +20,10 @@ jobs:
       matrix:
         python-version: [ '3.11', '3.12', '3.13' ]
       fail-fast: false
+    if: |
+      github.event_name == 'push' ||
+      github.event_name == 'pull_request' ||
+      (github.event_name == 'pull_request_target' && github.event.label.name == 'rerun-tests')
 
     steps:
     - uses: actions/checkout@v4
